--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ before_script:
 - configure-kibana-index --es-endpoint search-fourfront-builds-uhevxdzfcv7mkm5pj5svcri3aq.us-east-1.es.amazonaws.com:80
 script:
 # setone is essentially all tests that are not indexing; change here for clarity
-- travis_wait 30 bin/test -v -v --aws-auth -m "working" --durations=10
+- travis_wait 30 bin/test --timeout=200 -v -v --aws-auth -m "working" --durations=10
   --cov src/encoded --es search-fourfront-builds-uhevxdzfcv7mkm5pj5svcri3aq.us-east-1.es.amazonaws.com:80;
 after_script:
 - echo leader=$BUILD_LEADER status=$BUILD_AGGREGATE_STATUS
@@ -67,19 +67,6 @@ after_success:
 - echo $TRAVIS_PULL_REQUEST
 - echo $TRAVIS_BRANCH
 - echo $tibanna_deploy
-- ! "if [ \"$BUILD_LEADER\" = \"YES\" ]; then\n  if [ \"$BUILD_AGGREGATE_STATUS\"
-  = \"others_succeeded\" ]; then\n    if [ \"$TRAVIS_PULL_REQUEST\" = \"false\" ];
-  then\n      echo \"cleanup build artifacts\"\n      rm elasticsearch-5.4.1.deb\n
-  \     rm .to_export_back\n      rm versions.cfg\n      pip install awsebcli\n      aws
-  s3 cp --recursive s3://encoded-4dn-conf-prod/.aws /home/travis/.aws\n      git remote
-  add origin-travis https://${GH_TOKEN}@github.com/4dn-dcic/fourfront.git\n      git
-  config --global user.email \"travis@builder.com\"\n      git config --global user.name
-  \"Travis\"\n      if [ \"$TRAVIS_BRANCH\" = \"master\" ]; then\n         git config
-  --replace-all remote.origin.fetch '+refs/heads/*:refs/remotes/origin/*'\n         git
-  fetch --no-tags\n         git checkout master\n         \n         if [ -n \"$tibanna_deploy\"
-  ]; then\n            echo \"Job succeeded! PUBLISHING to ${tibanna_deploy} environment...\"\n
-  \           eb use ${tibanna_deploy} --debug\n            python deploy/deploy_beanstalk.py\n
-  \        fi\n      fi\n     fi\n   fi\n  fi\n"
 - |
   if  [[ $TRAVIS_BRANCH == 'master' ]]; then
     echo 'Triggering docs build';
