--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ certifi = "2018.4.16"
 chardet = "3.0.4"
 colorama = "0.3.3"
 coverage = "4.0.3"
-dcicsnovault = "3.1.0b1"  # ">=3.1.0,<4"
+dcicsnovault = ">=3.1.1,<4"
 dcicutils = ">=0.31.1,<1"
 docutils = "0.12"
 elasticsearch = "5.5.3"
