--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,11 +42,11 @@ certifi = ">=2020.4.5.2"
 chardet = "3.0.4"
 colorama = "0.3.3"
 dcicpyvcf = "1.0.0"
-dcicsnovault = ">=3.1.1,<4"
-dcicutils = ">=0.31.1,<1"
+dcicsnovault = "4.0.0b2"
+dcicutils = "0.32.0b0"
 docutils = "0.12"
-elasticsearch = "5.5.3"
-elasticsearch-dsl = "^5.4.0"
+elasticsearch = "6.4.0"
+elasticsearch-dsl = "^6.4.0"
 execnet = "1.4.1"
 future = "^0.15.2"
 humanfriendly = "1.44.5"
@@ -91,7 +91,7 @@ rutter = ">=0.2,<1"
 s3transfer = "^0.2.0"
 simplejson = "^3.17.0"
 SPARQLWrapper = "1.7.6"
-SQLAlchemy = "1.2.16"
+SQLAlchemy = "1.3.16"
 structlog = ">=18.1.0,<20"
 submit4dn = "0.9.7"
 subprocess-middleware = ">=0.3,<1"
