--- a/pyproject.toml
+++ b/pyproject.toml
@@ -191,6 +191,7 @@ main = "encoded:main"
 
 [paste.composite_factory]
 indexer = "snovault.elasticsearch.es_index_listener:composite"
+ingester = "encoded.ingestion_listener:composite"
 
 [paste.filter_app_factory]
 memlimit = "encoded.memlimit:filter_app"
