--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 # Note: Various modules refer to this system as "encoded", not "cgap-portal".
 name = "encoded"
-version = "2.1.9"
+version = "2.1.10"
 description = "Clinical Genomics Analysis Platform"
 authors = ["4DN-DCIC Team <support@4dnucleome.org>"]
 license = "MIT"
@@ -115,7 +115,9 @@ xlwt = "1.2.0"
 "zope.sqlalchemy" = "^1.2"
 
 [tool.poetry.dev-dependencies]
-coverage = ">=5.1"
+coverage = ">=5.2"
+codacy-coverage = ">=1.3.11"
+coveralls = ">=2.1.1"
 # flake8 = "3.7.8"
 flaky = "3.6.1"
 # flask only for moto[server]
