--- a/.travis.yml
+++ b/.travis.yml
@@ -48,10 +48,7 @@ before_install:
 - node --version
 - npm config set python /usr/bin/python2.7
 install:
-- pip install --upgrade pip
-- pip install poetry
-- poetry install
-- make npm-setup
+- make build
 before_script:
 - configure-kibana-index --es-endpoint search-fourfront-builds-uhevxdzfcv7mkm5pj5svcri3aq.us-east-1.es.amazonaws.com:80
 script:
