--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 # Note: Various modules refer to this system as "encoded", not "cgap-portal".
 name = "encoded"
-version = "2.3.4"
+version = "2.3.5"
 description = "Clinical Genomics Analysis Platform"
 authors = ["4DN-DCIC Team <support@4dnucleome.org>"]
 license = "MIT"
@@ -89,6 +89,7 @@ rfc3987 = "^1.3.6"
 rsa = "3.3"
 rutter = ">=0.2,<1"
 s3transfer = "^0.2.0"
+sentry-sdk = "0.16.2"
 simplejson = "^3.17.0"
 SPARQLWrapper = "1.7.6"
 SQLAlchemy = "1.3.16"  # Pinned because >=1.3.17 is a problem
