--- a/pyproject.toml
+++ b/pyproject.toml
@@ -115,6 +115,8 @@ xlwt = "1.2.0"
 "zope.sqlalchemy" = "1.3"
 
 [tool.poetry.dev-dependencies]
+# PyCharm says boto3-stubs contains useful type hints
+boto3-stubs = ">=1.14.37.0"
 coverage = ">=5.2"
 codacy-coverage = ">=1.3.11"
 coveralls = ">=2.1.1"
