--- a/test.ini
+++ b/test.ini
@@ -1,6 +1,6 @@
 [app:app]
 use = config:base.ini#app
-session.secret = %(here)s/session-secret.b64
+session.secret = superlegitrealsecret
 file_upload_bucket = elasticbeanstalk-encoded-4dn-files
 blob_bucket = elasticbeanstalk-encoded-4dn-blobs
 #blob_store_profile_name = encoded-4dn-files
