--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,7 @@ codeguru-profiler-agent = "^1.2.4"
 # of cryptography.hazmat.bindings._rust in cryptography package. 2023-04-21.
 cryptography = "39.0.2"
 colorama = "0.3.3"
-dcicpyvcf = "1.0.0.1b0"  # "^1.0.0"
+dcicpyvcf = "3.0.0a4"
 dcicsnovault = "10.0.4.1b25"
 dcicutils = "7.12.0.2b9"
 elasticsearch = "7.13.4"
