--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,8 +52,7 @@ codeguru-profiler-agent = "^1.2.4"
 cryptography = "39.0.2"
 colorama = "0.3.3"
 dcicpyvcf = "^3.1.0"
-# dcicsnovault = "^11.18.0"
-dcicsnovault = "11.19.0.1b1"
+dcicsnovault = "^11.21.0"
 dcicutils = "^8.13.3"
 elasticsearch = "7.13.4"
 execnet = "1.4.1"
