--- a/base.ini
+++ b/base.ini
@@ -6,17 +6,23 @@ retry.attempts = 3
 file_upload_bucket = cgap-unit-testing-files
 file_wfout_bucket = cgap-unit-testing-wfout
 # this really shouldn't be used with development, only uncomment if your sure - unknow
-# th
 # system_bucket = elasticbeanstalk-encoded-4dn-system
 elasticsearch.server = 127.0.0.1:9200
-# elasticsearch.server.actual_port = 9201
-# The above elasticsearch.server.actual_port property is useful (only) for running a localhost ElasticSearch
+
+# The elasticsearch.server.actual_port property is useful (only) for running a localhost ElasticSearch
 # proxy in order to observe traffic (requests/responses) between portal and ElasticSearch with a tool like
 # mitmweb; e.g. setting elasticsearch.server.actual_port to 9201 and elasticsearch.server to localhost:9200
 # will case ElasticSearch to actually run on port 9201 but will cause portal to talk to it via port 9200,
 # and then we can run mitmweb --mode reverse:http://localhost:9201 -p 9200 --web-port 8081 which will
 # allow us to browse to http://localhost:8081 locally to observe all of the ElasticSearch traffic;
 # and note to install mitmweb do: pip install mitmproxy
+# elasticsearch.server.actual_port = 9203
+
+# The elasticsearch.server.transport_ports property is useful (only) for defining the "transport"
+# ports for a localhost ElasticSearch instance. This can be useful if you want to (for example) ran
+# both smaht-port and cgap-portal simultaneously. The default value (if unspecified) is "9300-9305".
+# elasticsearch.server.transport_ports = 9400-9405
+
 ontology_path = %(here)s/ontology.json
 aws_ip_ranges_path = %(here)s/aws-ip-ranges.json
 #this is to reroute downloads to something other than aws s3
