--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,8 @@ codeguru-profiler-agent = "^1.2.4"
 cryptography = "39.0.2"
 colorama = "0.3.3"
 dcicpyvcf = "^3.1.0"
-dcicsnovault = "^11.21.0"
+# dcicsnovault = "^11.21.0"
+dcicsnovault = "11.21.0.1b4"
 # dcicutils = "^8.13.3"
 dcicutils = "8.13.3.1b10"
 elasticsearch = "7.13.4"
