--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "babel-jest": "^29.1.2",
     "babel-loader": "^8.2.3",
     "babel-plugin-minify-dead-code-elimination": "^0.5.1",
-    "bootstrap": "^4.6.1",
+    "bootstrap": "^5.3.0",
     "bufferutil": "^4.0.7",
     "eslint": "^8.10.0",
     "eslint-plugin-cypress": "^2.12.1",
@@ -61,7 +61,7 @@
     "@gmod/tabix": "^1.5.11",
     "@gmod/vcf": "^5.0.6",
     "@hms-dbmi-bgm/react-workflow-viz": "0.1.5",
-    "@hms-dbmi-bgm/shared-portal-components": "github:4dn-dcic/shared-portal-components#0.1.80",
+    "@hms-dbmi-bgm/shared-portal-components": "github:4dn-dcic/shared-portal-components#0.1.91-beta.5",
     "auth0-lock": "^11.33.0",
     "buffer": "^6.0.3",
     "d3": "^5.16.0",
