--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "prop-types": "^15.8.1",
     "query-string": "^4.3.4",
     "react": "^17.0.2",
-    "react-bootstrap": "1.6.4",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.4",
     "react-jsx-parser": "^1.25.1",
