--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "@gmod/vcf": "^5.0.6",
     "@hms-dbmi-bgm/react-workflow-viz": "0.1.5",
     "@hms-dbmi-bgm/shared-portal-components": "github:4dn-dcic/shared-portal-components#0.1.91-beta.5",
-    "auth0-lock": "^11.33.0",
+    "@reduxjs/toolkit": "^2.2.6",
+    "auth0-lock": "^12.5.1",
     "buffer": "^6.0.3",
     "d3": "^5.16.0",
     "date-fns": "^2.28.0",
@@ -70,7 +71,7 @@
     "domready": "^1.0.8",
     "form-serialize": "^0.7.2",
     "generic-filehandle": "^3.0.0",
-    "higlass": "1.12.2",
+    "higlass": "1.13.4",
     "higlass-bigwig-datafetcher": "0.2.0",
     "higlass-clinvar": "0.2.5",
     "higlass-cohort": "0.3.5",
@@ -83,22 +84,22 @@
     "higlass-sv": "1.0.5",
     "higlass-text": "0.1.6",
     "higlass-transcripts": "0.3.8",
-    "markdown-to-jsx": "^6.11.4",
+    "markdown-to-jsx": "^7.1.6",
     "memoize-one": "^5.1.1",
     "pagedjs": "^0.2.0",
-    "pixi.js": "^5.2.4",
+    "pixi.js": "^6.5.10",
     "process": "^0.11.10",
     "prop-types": "^15.8.1",
     "query-string": "^4.3.4",
-    "react": "^17.0.2",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.3.1",
     "react-draggable": "^4.4.4",
-    "react-jsx-parser": "^1.25.1",
-    "react-redux": "^7.2.6",
+    "react-jsx-parser": "^2.0.0",
+    "react-redux": "^9.1.2",
     "react-tooltip": "4.2.10",
     "react-transition-group": "^4.4.2",
-    "redux": "^3.7.0",
+    "redux": "^5.0.1",
     "stream-browserify": "^3.0.0",
     "subprocess-middleware": "0.2.0",
     "underscore": "^1.10.2",
@@ -106,5 +107,10 @@
   },
   "optionalDependencies": {
     "cypress": "^10.3.0"
+  },
+  "overrides": {
+    "@hms-dbmi-bgm/shared-portal-components": {
+      "auth0-lock": "$auth0-lock"
+    }
   }
 }
