--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "react-draggable": "^4.4.4",
     "react-jsx-parser": "^2.0.0",
     "react-redux": "^9.1.2",
-    "react-tooltip": "4.2.10",
+    "react-tooltip": "^4.2.21",
     "react-transition-group": "^4.4.2",
     "redux": "^5.0.1",
     "stream-browserify": "^3.0.0",
